--- a/每周一道初中数学题.md
+++ b/每周一道初中数学题.md
@@ -1,3 +1,5 @@
+注意：这篇笔记包含LaTex-Math语法，由于github不支持该语法的解析，如需查看，请移步本人[GitHub Homepage](https://ming-lian.github.io/2019/04/01/Math-Subject-per-Week/)
+
 <a name="content">目录</a>
 
 [每周一道初中数学题](#title)
