--- a/概率论学习笔.md
+++ b/概率论学习笔.md
@@ -28,3 +28,44 @@
             - [1.6.2.1. 基本比例谬误：产生原因——基本比例悬殊](#base-rate-fallacy)
             - [1.6.2.2. 贝叶斯的另一种解读：信息修正的观点](#interpret-bayes-theorem-in-other-view)
         - [1.6.3. 全概率及用全概率表示的贝叶斯公式](#complete-probability-and-modify-bayes-formula-by-complete-probability)
+    - [1.7. 事件的独立性](#independence-of-events)
+- [2. 随机变量及其分布](#random-variable-and-its-distribution)
+    - [2.1. 随机变量：事件与其数值表示的映射关系](#what-is-random-variable)
+    - [2.2. 二项分布及由此引出一些统计学基本概念](#binomial-distribution)
+        - [2.2.1. 概率质量函数](#probability-mass-function)
+        - [2.2.2. n重伯努利试验与二项分布](#n-fold-bernoulli-trials-and-binomial-distribution)
+        - [2.2.3. 离散随机变量的累计分布函数](#cumulative-distribution-function-for-discrete-random-variable)
+        - [2.2.4. 离散随机变量的数学期望](#math-expectation-of-discrete-random-variable)
+            - [2.2.4.1. 彩票中奖问题](#lottery-problem)
+            - [2.2.4.2. 离散随机变量的数学期望](#expectation-of-discrete-random-variable)
+            - [2.2.4.3. 数学期望的两种重要意义](#2-meanings-of-expectation)
+            - [2.2.4.4. 辛普森悖论：要考虑比例进行加权平均](#simpson's-paradox)
+            - [2.2.4.5. 二项分布的数学期望](#expectation-of-binomial-distribution)
+        - [2.2.5. 方差与标准差](#variance-and-standard-deviation)
+            - [2.2.5.1. 方差](#variance)
+            - [2.2.5.2. 标准差](#standard-deviation)
+            - [2.2.5.3. 方差的性质](#characteristics-of-variance)
+            - [2.2.5.4. 二项分布的方差](#variance-of-binomial-distribution)
+    - [2.3. 根据随机变量的数字特征估计PMF的方法](#estimate-pmf-based-on-expectation-or-variance)
+        - [2.3.1. 马尔可夫不等式](#narkov-inequality)
+        - [2.3.2. 切比雪夫不等式](#chebyshev-inequality)
+    - [2.4. 泊松分布](#poisson-distribution)
+        - [2.4.1. 泊松分布的由来：馒头店问题](#origin-of-poisson-distribution)
+        - [2.4.2. 泊松分布的期望与方差](#expectation-and-variance-of-poisson-distribution)
+        - [2.4.3. 满足泊松分布的条件](#prerequisite-of-poisson-distribution)
+        - [2.4.4. 二项分布的近似](#approximate-binomial-distribution)
+    - [2.5. 几个由n重伯努利试验引出的重要离散分布](#serveral-important-discrete-distribution)
+        - [2.5.1. 几何分布](#geometric-distribution)
+            - [2.5.1.1. 几何分布的定义](#defination-of-geometric-distribution)
+            - [2.5.1.2. 几何分布的期望与方差及其推导](#expectation-and-variance-of-geometric-distribution)
+            - [2.5.1.3. 几何分布的无记忆性](#memoryless-of-geometric-distribution)
+        - [2.5.2. 负二项分布](#negative-binomial-distribution)
+            - [2.5.2.1. 负二项分布的多种定义方式](#defination-of-negative-binomial-distribution)
+            - [2.5.2.2. 名称由来及其有效性](#origin-of-name-of-negative-binomial-distribution)
+            - [2.5.1.2. 期望与方差及其推导](#expectation-and-variance-of-negative-binomial-distribution)
+            - [2.5.1.3. 著名例子：巴拿赫火柴盒问题](#barnach-match-box-problem)
+            - [2.5.1.4. 与几何分布的关系](#relation-between-negative-binomial-distribution-and-geometric-distribution)
+        - [2.5.3. 超几何分布](#hypergeometric-distribution)
+            - [2.5.3.1. 超几何分布的定义](#defination-of-hypergeometric-distribution)
+            - [2.5.3.2. 期望与方差及其推导](#expectation-and-variance-of-hypergeometric-distribution)
+            - [2.5.3.3. 与二项分布的关系](#relation-between-hypergeometric-distribution-and-binomial-distribution)
