--- a/概率论学习笔.md
+++ b/概率论学习笔.md
@@ -11,7 +11,7 @@
         - [1.2.2. 概率的公理化：本质将P定义为一个抽象函数](#axiomatization-of-probability)
     - [1.3. 事件之间的运算与关系](#algorithmn-and-relationship-between-events)
         - [1.3.1. 事件/集合的基本运算法则](#basic-algorithmn-of-set)
-        - [1.3.2. 事件的关系及其符号表示方法](#relation-between-2-events-and-its-notation)
+        - [1.3.2. 事件的关系及其符号表示方法](#relation-between-2-events-and-its-notation)  
     - [1.4. 古典学派概率](#probability-given-by-classical-school)
         - [1.4.1. 乘法原理：分K步骤](#multiplication-principle)
         - [1.4.2. 加法原理：K种完成方法](#addition-principle)
@@ -29,7 +29,7 @@
             - [1.6.2.2. 贝叶斯的另一种解读：信息修正的观点](#interpret-bayes-theorem-in-other-view)
         - [1.6.3. 全概率及用全概率表示的贝叶斯公式](#complete-probability-and-modify-bayes-formula-by-complete-probability)
     - [1.7. 事件的独立性](#independence-of-events)
-- [2. 随机变量及其分布](#random-variable-and-its-distribution)
+- [2. 离散随机变量及其分布](#discrete-random-variable-and-its-distribution)
     - [2.1. 随机变量：事件与其数值表示的映射关系](#what-is-random-variable)
     - [2.2. 二项分布及由此引出一些统计学基本概念](#binomial-distribution)
         - [2.2.1. 概率质量函数](#probability-mass-function)
@@ -61,7 +61,7 @@
             - [2.5.1.3. 几何分布的无记忆性](#memoryless-of-geometric-distribution)
         - [2.5.2. 负二项分布](#negative-binomial-distribution)
             - [2.5.2.1. 负二项分布的多种定义方式](#defination-of-negative-binomial-distribution)
-            - [2.5.2.2. 名称由来及其有效性](#origin-of-name-of-negative-binomial-distribution)
+            - [2.5.2.2. 名称由来及其规范性](#origin-of-name-of-negative-binomial-distribution)
             - [2.5.1.2. 期望与方差及其推导](#expectation-and-variance-of-negative-binomial-distribution)
             - [2.5.1.3. 著名例子：巴拿赫火柴盒问题](#barnach-match-box-problem)
             - [2.5.1.4. 与几何分布的关系](#relation-between-negative-binomial-distribution-and-geometric-distribution)
@@ -69,3 +69,18 @@
             - [2.5.3.1. 超几何分布的定义](#defination-of-hypergeometric-distribution)
             - [2.5.3.2. 期望与方差及其推导](#expectation-and-variance-of-hypergeometric-distribution)
             - [2.5.3.3. 与二项分布的关系](#relation-between-hypergeometric-distribution-and-binomial-distribution)
+- [3. 连续随机变量及其分布](#continuous-random-variable-and-its-distribution)
+    - [3.1. 概率密度函数](#probability-density-function)
+        - [3.1.1. 引出概率密度函数](#introduce-probability-density-function)
+        - [3.1.2. 单点的概率为0](#null-probability-for-single-point)
+        - [3.1.3. 连续随机变量的期望与方差](#expectation-and-variance-of-continuous-random-variable)
+        - [3.1.4. 连续随机变量的累积分布函数](#cumulative-distribution-function-for-continuous-random-variable)
+    - [3.2. 均匀分布](#uniform-distribution)
+    - [3.3. 正态分布](#normal-distribution)
+        - [3.3.1. 由来与定义](#origin-and-defination-of-normal-distribution)
+        - [3.3.2. 证明正态分布概率密度函数的规范性](#prove-the-normativity-of-normal-distribution-pdf)
+        - [3.3.3. 中心极限定理](#central-limit-theorem)
+        - [3.3.4. 标准正态分布及标准化方法](#standar-normal-distribution-and-normalization-method)
+        - [3.3.5. 期望与方差及其推导](#expectation-and-variance-of-normal-distribution)
+        - [3.3.6. 六西格玛](#6-sigma-rule)
+    - [3.4. 指数分布](#)
