--- a/数学之美读书笔记.md
+++ b/数学之美读书笔记.md
@@ -35,33 +35,33 @@ B是一个对角阵，即只有对角线上是非0值
 $$
 A_{4 \times 5}=
 \begin{bmatrix}
-1 & 0 & 0 & 0 & 2 \\
-0 & 0 & 3 & 0 & 0 \\
-0 & 0 & 0 & 0 & 0 \\
+1 & 0 & 0 & 0 & 2 \\\\
+0 & 0 & 3 & 0 & 0 \\\\
+0 & 0 & 0 & 0 & 0 \\\\
 0 & 4 & 0 & 0 & 0
 \end{bmatrix}
 \quad
 X_{4 \times 5}=
 \begin{bmatrix}
-0 & 0 & 1 & 0 \\
-0 & 1 & 0 & 0 \\
-0 & 0 & 0 & -1 \\
+0 & 0 & 1 & 0 \\\\
+0 & 1 & 0 & 0 \\\\
+0 & 0 & 0 & -1 \\\\
 1 & 0 & 0 & 0
 \end{bmatrix}
 \quad
 B_{4 \times 5}=
 \begin{bmatrix}
-4 & 0 & 0 & 0 & 0 \\
-0 & 3 & 0 & 0 & 0 \\
-0 & 0 & \sqrt{5} & 0 & 0 \\
+4 & 0 & 0 & 0 & 0 \\\\
+0 & 3 & 0 & 0 & 0 \\\\
+0 & 0 & \sqrt{5} & 0 & 0 \\\\
 0 & 0 & 0 & 0 & 0
 \end{bmatrix}
 \quad
 Y_{5 \times 5}=
 \begin{bmatrix}
-0 & 1 & 0 & 0 & 0 \\
-0 & 0 & 1 & 0 & 0 \\
-\sqrt{0.2} & 0 & 0 & 0 & \sqrt{0.8} \\
+0 & 1 & 0 & 0 & 0 \\\\
+0 & 0 & 1 & 0 & 0 \\\\
+\sqrt{0.2} & 0 & 0 & 0 & \sqrt{0.8} \\\\
 -\sqrt{0.8} & 0 & 0 & 0 & \sqrt{0.2}
 \end{bmatrix}
 $$
@@ -88,11 +88,11 @@ $$
 
 > 由于对角矩阵B的对角线上的元素的很多值相对于其他的值非常小，或者干脆为0，故而可以省略，例如，当B为如下情况时：
 >
-> $$B_{4 \times 5}=\begin{bmatrix}4 & 0 & 0 & 0 & 0 \\ 0 & 3 & 0 & 0 & 0 \\ 0 & 0 & \sqrt{5} & 0 & 0 \\ 0 & 0 & 0 & 0 & 0 \end{bmatrix}$$
+> $$B_{4 \times 5}=\begin{bmatrix}4 & 0 & 0 & 0 & 0 \\\\ 0 & 3 & 0 & 0 & 0 \\\\ 0 & 0 & \sqrt{5} & 0 & 0 \\\\ 0 & 0 & 0 & 0 & 0 \end{bmatrix}$$
 >
 > 则可以对B进行简化，省略都是0的行和列，得到B'：
 >
-> $$B'_{3 \times 3}=\begin{bmatrix}4 & 0 & 0 \\ 0 & 3 & 0 \\ 0 & 0 & \sqrt{5} \end{bmatrix}$$
+> $$B'_{3 \times 3}=\begin{bmatrix}4 & 0 & 0 \\\\ 0 & 3 & 0 \\\\ 0 & 0 & \sqrt{5} \end{bmatrix}$$
 >
 > 那么想对应地，X保留前n列，Y保留前n行
 
@@ -105,10 +105,10 @@ $$
 $$
 A=
 \begin{bmatrix}
-a_{11} & a_{12} & ... & a_{1M} \\
-a_{21} & a_{22} & ... & a_{2M} \\
-... & ... \\
-a_{N1} & a_{N2} & ... & a_{NM} \\
+a_{11} & a_{12} & ... & a_{1M} \\\\
+a_{21} & a_{22} & ... & a_{2M} \\\\
+... & ... \\\\
+a_{N1} & a_{N2} & ... & a_{NM} \\\\
 \end{bmatrix}
 $$
 
@@ -128,7 +128,7 @@ $$
 
     这一行的每个非零元素表示这个词在每个语义类的重要性（或者说是相关性），例如：
 
-    $$X=\begin{bmatrix}0.7 & 0.15 \\ 0.22 & 0.49 \\ 0 & 0.92\end{bmatrix}$$
+    $$X=\begin{bmatrix}0.7 & 0.15 \\\\ 0.22 & 0.49 \\\\ 0 & 0.92\end{bmatrix}$$
 
     则第一个词与第一个词类最相关，而与第二个此类的关系比较弱，以此类推
 
@@ -138,7 +138,7 @@ $$
 
     这一列的每个非零元素表示这篇文章在每个的主题重要性（或者说是相关性），例如：
 
-    $$Y=\begin{bmatrix}0.7 & 0.15 & 0.22 & 0.39 \\ 0 & 0.92 & 0.08 & 0.53\end{bmatrix}$$
+    $$Y=\begin{bmatrix}0.7 & 0.15 & 0.22 & 0.39 \\\\ 0 & 0.92 & 0.08 & 0.53\end{bmatrix}$$
 
     则第一篇文章很明显属于第一个主题，第二篇文章和第二个主题很相关，以此类推
 
@@ -146,7 +146,7 @@ $$
 
     中间的矩阵则表示词的类和文章的类之间的相关性，例如
 
-    $$B=\begin{bmatrix}0.7 & 0.21 \\ 0.18 & 0.63 \end{bmatrix}$$
+    $$B=\begin{bmatrix}0.7 & 0.21 \\\\ 0.18 & 0.63 \end{bmatrix}$$
 
     则第一个词的语义类与第一个主题相关，而第二个主题相关性较弱，而第二个词的语义类则相反
 
@@ -266,11 +266,11 @@ $$TF_1·IDF_1+TF_2·IDF_2+...+TF_N·IDF_N$$
 
     比如，比如词汇表有64000个词，其编号和词如下表所示：
 
-    $$\begin{array}{c|c}\hline编号 & 实词 \\\hline 1 & 阿 \\ 2 & 啊 \\ 3 & 阿斗 \\ ... & ... \\ \hline \end{array}$$
+    $$\begin{array}{c|c}\hline编号 & 实词 \\\\ \hline 1 & 阿 \\\\ 2 & 啊 \\\\ 3 & 阿斗 \\\\ ... & ... \\\\ \hline \end{array}$$
 
     对于某一篇文本，这64000个词的TF-IDF值如下：
 
-    $$\begin{array}{c|c}\hline编号 & TF-IDF \\\hline 1 & 0 \\ 2 & 0.0034 \\ 3 & 0 \\ ... & ... \\ \hline \end{array}$$
+    $$\begin{array}{c|c}\hline编号 & TF-IDF \\\\ \hline 1 & 0 \\\\ 2 & 0.0034 \\\\ 3 & 0 \\\\ ... & ... \\\\ \hline \end{array}$$
 
 - 基于余弦相似度进行文本分类的两种情况
 
