--- a/数学之美读书笔记.md
+++ b/数学之美读书笔记.md
@@ -1,4 +1,4 @@
-<a name="title">目录</a>
+<a name="content">目录</a>
 
 [数学之美读书笔记](#title)
 - [1. 从文本分类的角度理解奇异值分解(SVD)](#understand-svd-in-view-of-text-classification)
