--- a/超模君的数学干货.md
+++ b/超模君的数学干货.md
@@ -94,10 +94,10 @@ $$
     $$
     \begin{aligned}
     \frac{dy}{dx} &=
-    \lim_{\Delta x \to 0}\frac{\log_a(x+\Delta x)-\log_ax}{\Delta x} \\
-    &=\lim_{\Delta x \to 0}\log_a(\frac{x+\Delta x}{x})^{\frac{1}{\Delta x}} \\
-    &=\frac 1x\lim_{\Delta x \to 0}\log_a(\frac{x+\Delta x}{x})^{\frac{x}{\Delta x}} \\
-    &=\frac 1x\lim_{\Delta x \to 0}\log_a(1+\frac{\Delta x}{x})^{\frac{x}{\Delta x}} \\
+    \lim_{\Delta x \to 0}\frac{\log_a(x+\Delta x)-\log_ax}{\Delta x} \\\\
+    &=\lim_{\Delta x \to 0}\log_a(\frac{x+\Delta x}{x})^{\frac{1}{\Delta x}} \\\\
+    &=\frac 1x\lim_{\Delta x \to 0}\log_a(\frac{x+\Delta x}{x})^{\frac{x}{\Delta x}} \\\\
+    &=\frac 1x\lim_{\Delta x \to 0}\log_a(1+\frac{\Delta x}{x})^{\frac{x}{\Delta x}} \\\\
     &=\frac 1x\log_ae
     \end{aligned}
     $$
