--- a/超模君的数学干货.md
+++ b/超模君的数学干货.md
@@ -108,7 +108,7 @@ $$
 
 所以从上面可以看出，当a=e时，无论是指数函数还是对数函数，其导数形式都是最简单的
 
-$$\frac{d e^x}{dx}=e^x ,\quad \frac{d\ln x}{dx}=\frac 1x$$$
+$$\frac{d e^x}{dx}=e^x ,\quad \frac{d\ln x}{dx}=\frac 1x$$
 
 
 
