--- a/概率论学习笔.md
+++ b/概率论学习笔.md
@@ -84,3 +84,9 @@
         - [3.3.5. 期望与方差及其推导](#expectation-and-variance-of-normal-distribution)
         - [3.3.6. 六西格玛](#6-sigma-rule)
     - [3.4. 指数分布](#)
+        - [3.4.1. 由馒头卖出之间的时间间隔问题引出指数分布](#introduct-exp-distribution-by-steamed-bread-problem)
+        - [3.4.2. 泊松过程：任意t时间段内卖出的馒头数](#poisson-process)
+        - [3.4.3. 指数分布的累积分布](#cumulative-distribution-of-exp-distribution)
+        - [3.4.4. 期望与方差及其推导](#expectation-and-variance-of-exp-distribution)
+        - [3.4.5. 指数分布的无记忆性](#memoryless-of-exp-distribution)
+        - [3.4.6. 指数分布与几何分布的关系](#relation-between-exp-distribution-and-geometric-distribution)
